# RUSTApi

./: .env  .env.example  .gitignore  README.md
Lakehouse/: python_bingings.py
Mock API/Steven/: app.py  appPUT.py  consumePUT.py  consume_app.py  mock_data.py  schema.py
Mock API/Steven/RUST/: Cargo.toml  main.rs
Mock API/rusty-delta/: Cargo.toml
Mock API/rusty-delta/src/: main.rs
Old/Lakehouse/: README.md
Old/Read API/: deltaschema.py  readAPI.ipynb
Old/delta/: part-00000-1c70563c-3384-4e97-8def-d63e23ed8388-c000.snappy.parquet  part-00000-1f4590b0-2860-4dad-8e2b-2fde96612770-c000.snappy.parquet  part-00000-307a5728-0d10-4188-94f2-36369e8cacd6-c000.snappy.parquet  part-00000-33de8485-24a3-4bf7-b74a-93ebc33d6d5b-c000.snappy.parquet  part-00000-45bd837d-6307-47ad-ba4d-d0f6c84e8fc0-c000.snappy.parquet  part-00000-7403d3a5-1a2c-4dce-8cc0-8c581f1ead8b-c000.snappy.parquet  part-00000-7f2b2f16-ac32-414c-8621-90a9c18af25f-c000.snappy.parquet  part-00000-8401ae65-be41-4cd5-b98c-3d7d7681e5a6-c000.snappy.parquet  part-00000-8cf44e7a-7735-4d5e-9f14-3c24684e393d-c000.snappy.parquet  part-00000-8e3f729b-b653-454e-b002-ada8154fa805-c000.snappy.parquet  part-00000-a823111f-7a37-4c50-8613-e1cc6dcd5657-c000.snappy.parquet  part-00000-cc227fcd-b1ef-4394-bb36-5f66054507e9-c000.snappy.parquet  part-00000-d8aa51e9-55ad-4a93-a9f9-b9fe820f6d86-c000.snappy.parquet  part-00000-e084c36e-5e6b-4a4e-8fa4-8d23f5b65eb4-c000.snappy.parquet  (+104 more)
PythonAPI/: requirements.txt
PythonAPI/src/: main.py
Read API/: readAPI.ipynb
Rust_append/: Cargo.lock.bak  Cargo.toml
Rust_append/src/: main.rs
rust-merge/: Cargo.toml
rust-merge/src/: main.rs  test.rs  test1.rs
src/: main.py
(+146 files in other folders)
