[package]
name = "rusty-delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deltalake = { version = "0.6.0", features = ["azure", "arrow", "parquet", "datafusion-ext"] }
tokio = "1.28.0"
arrow = "28.0.0"