[package]
name = "mock_api" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Alice <a@example.com>", "Bob <b@example.com>"]

edition = '2021'


[dependencies]
actix-rt = "2.7"
actix-web = "4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}


[lib]
name = "mock_api"           # The name of the target.
path = "main.rs"

[[bin]]
name = "mock_api"
path = "main.rs"
